--- a/tech-titan-tracker/package.json
+++ b/tech-titan-tracker/package.json
@@ -1,11 +1,13 @@
 {
   "name": "tech-titan-tracker",
   "version": "0.1.0",
+  "type" : "module",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
     "d3": "^7.9.0",
     "express": "^4.18.3",
