--- a/tech-titan-tracker/package.json
+++ b/tech-titan-tracker/package.json
@@ -1,16 +1,18 @@
 {
   "name": "tech-titan-tracker",
   "version": "0.1.0",
-  "type" : "module",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@upstash/redis": "^1.29.0",
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "d3": "^7.9.0",
     "express": "^4.18.3",
+    "ioredis": "^5.3.2",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
