--- a/tech-titan-tracker/package.json
+++ b/tech-titan-tracker/package.json
@@ -10,8 +10,9 @@
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "d3": "^7.9.0",
-    "express": "^4.18.3",
+    "express": "^4.19.2",
     "ioredis": "^5.3.2",
+    "lodash": "^4.17.21",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
