--- a/tech-titan-tracker/package.json
+++ b/tech-titan-tracker/package.json
@@ -13,6 +13,7 @@
     "express": "^4.19.2",
     "ioredis": "^5.3.2",
     "lodash": "^4.17.21",
+    "node": "^18.20.0",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
