--- a/tech-titan-tracker/package.json
+++ b/tech-titan-tracker/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tech-titan-tracker",
   "version": "0.1.0",
-  "type": "module",
+  "module": "Commonjs",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
