--- a/tech-titan-tracker/package.json
+++ b/tech-titan-tracker/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "d3": "^7.9.0",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.2.0",
     "ioredis": "^5.3.2",
     "lodash": "^4.17.21",
     "node": "^18.20.0",
